--- a/README
+++ b/README
@@ -1,1 +1,49 @@
 Current ideas and submissions for Conferences in 2020
+
+
+
+
+
+*will need to update the dates*
+## Conferences
+
+- [ ] Elm In The Spring, April 16, 2019
+  - [Homepage](https://www.elminthespring.org/)
+  - [Tickets](https://ti.to/elm-in-the-spring/chicago-2019/en)
+  - [CFP](https://www.papercall.io/elm-in-the-spring-2019) 1/31/19 - Closes
+- [x] Reactathon, March 30th -31st
+  - [Homepage](https://www.reactathon.com/)
+  - [Tickets](https://ti.to/real-world-react/reactathon-2019)
+  - [CFP](https://docs.google.com/forms/d/e/1FAIpQLSf3gtpQkYb2SNNI2WxBTC2rFYpFUn6cyMA9k8HZVZrwg0gYVw/viewform?usp=sf_link)
+- [] JS Conf 2019, Aug 12-14th
+  - [Homepage](https://2019.jsconf.us/)
+  - [Tickets](https://ti.to/jsconf-us/jsconf-us-2019)
+  - [CFP](https://2019.jsconf.us/posts/2019-01-14-cfp-open)
+- [ ] Byte Conf JavaScript, Friday, March 1, 2019
+  - [Homepage](https://www.byteconf.com/js-2019)
+  - [Tickets](https://www.byteconf.com/s/twitch) 2/1/19 - Closes
+  - [CFP](https://www.papercall.io/cfps/1594/submissions/new)
+- [ ] Forward JS Ottawa, April
+  - [Homepage](https://forwardjs.com/ottawa)
+  - [Tickets]() coming soon
+  - [CFP](https://docs.google.com/forms/d/e/1FAIpQLSc-l9XDlihF2JTk5bHAzd0XCU16xg2XG-OP3a_HGInczb7CXw/viewform)
+- [ ] Elm Europe
+  - [Homepage]
+  - [Tickets]
+  - [CFP]
+- [ ] Elm-Conf
+  - [Homepage]
+  - [Tickets]
+  - [CFP]
+- [ ] Lambda Conf, Jun 5 to 9, 2019
+  - [Homepage](https://lambdaconf.zohobackstage.com/LambdaConf2019)
+  - [Tickets](https://www.eventbrite.com/e/lambdaconf-2019-tickets-53023936020?aff=$3350877965407078302)
+  - [CFP](https://www.papercall.io/lambdaconf-2019)
+- [ ] React Rally, August
+  - [Homepage]
+  - [Tickets]
+  - [CFP]
+- [ ] Lambda Squared, Knoxville, TN - April 26, 2019, April 27, 2019
+  - [Homepage](https://www.lambda-squared.com/home)
+  - [Tickets] coming soon
+  - [CFP](https://www.papercall.io/cfps/1658/submissions/new)
